# ostree-repo-utils

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-MIT  README.md  pnpm-lock.yaml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: audit.yml  cd.yml  ci.yml
crates/ostree-repo-client-utils/: Cargo.toml
crates/ostree-repo-client-utils/src/: main.rs
crates/ostree-repo-server-utils/: Cargo.toml
crates/ostree-repo-server-utils/src/: main.rs
crates/ostree-repo-utils-common/: Cargo.toml
crates/ostree-repo-utils-common/src/: keys.rs  lib.rs  metadata.rs  repo.rs
crates/ostree-repo-utils-common/src/sign/: kms.rs  mod.rs
openspec/changes/kms-ed25519-signing/: design.md  proposal.md  tasks.md
openspec/changes/kms-ed25519-signing/specs/kms-commit-signing/: spec.md
openspec/changes/kms-ed25519-signing/specs/kms-key-export/: spec.md
openspec/changes/kms-ed25519-signing/specs/workspace-structure/: spec.md
