[package]
name = "ostree-repo-utils"
version = "0.1.0"
edition = "2021"
description = "Utility commands to work with ostree repositories"
repository = "https://github.com/cunabli/ostree-repo-utils"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
