[package]
name = "ostree-repo-utils-common"
version = "0.1.0"
edition = "2021"
rust-version = "1.92"
license = "MIT"

[features]
kms = ["dep:aws-sdk-kms", "dep:aws-config"]

[dependencies]
ostree = "0.20"
glib = "0.20"
gio = "0.20"
anyhow = "1"
base64 = "0.22"

[dependencies.aws-sdk-kms]
version = "1"
optional = true

[dependencies.aws-config]
version = "1"
optional = true
